Button visibility fixes for mobile

--- a/src/components/LogoSelector/_LogoSelector.scss
+++ b/src/components/LogoSelector/_LogoSelector.scss
@@ -5,4 +5,5 @@
 
 .logo-button {
   border: none;
+  height: auto;
 }
