--- a/src/components/ProgressiveForm/_ProgressiveForm.scss
+++ b/src/components/ProgressiveForm/_ProgressiveForm.scss
@@ -41,6 +41,7 @@
   display: inline-grid;
   cursor: pointer;
   margin: 10px 10px;
+  height: auto;
 }
 
 .product-button.tinctures {
